# actinia-python-client

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README-dev.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/workflows/: black.yml  deploy_docs.yml  docs.yml  flake8.yml  python-code-quality.yml  python-publish.yml  tests.yml
02_installation/: index.html
03_quickstart/: index.html
04_location_management/: index.html
05_mapset_managment/: index.html
06_raster_vector_strds_managment/: index.html
07_process_chain_validation/: index.html
08_processing/: index.html
actinia/: __init__.py  actinia.py  job.py  location.py  mapset.py  raster.py  region.py  strds.py  toolbox.py  utils.py  vector.py
actinia/resources/: logger.py  templating.py
actinia/templates/: create_location.json
docker/: docker-compose-test.yml
docker/build-docker/: Dockerfile  README.md
docker/redis_data/: dump.rdb
docker/test-docker/: Dockerfile  actinia.cfg
docs/: README.md  _config.yml  index.md  installation.md  mkdocs.yml  quickstart.md
docs/docs/: 02_installation.md  03_quickstart.md  04_location_managment.md  05_mapset_managment.md  06_process_chain_validation.md  06_raster_vector_strds_managment.md  07_processing.md  08_processing.md  index.md  quickstart.md
notebooks/: actinia_leafmap.ipynb
search/: search_index.json
src/actinia/: __init__.py  actinia.py  job.py  location.py  mapset.py  raster.py  region.py  strds.py  utils.py  vector.py
src/actinia/resources/: logger.py  templating.py
test_data/: elevation.tif  firestations.geojson
tests/: __init__.py  actinia_config.py  conftest.py  test_actinia.py  test_actinia_base.py  test_actinia_location.py  test_actinia_location_management.py  test_actinia_mapset_management.py  test_actinia_processing.py  test_actinia_raster_management.py  test_actinia_strds_management.py  test_actinia_vector_management.py  test_process_chain_validation.py  test_processing.py  test_utils.py
tests/mock/: actinia_location_management_mock.py  actinia_mapset_management_mock.py  actinia_mock.py  actinia_process_chain_validation_mock.py  actinia_raster_management_mock.py  actinia_vector_management_mock.py
tests_mocked/: conftest.py  test_actinia_base.py  test_actinia_location_management.py  test_actinia_mapset_management.py  test_actinia_processing.py  test_actinia_raster_management.py  test_actinia_vector_management.py  test_process_chain_validation.py
tests_mocked/mock/: actinia_process_chain_validation_mock.py  actinia_strds_management_mock.py
