[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actinia-python-client"
version = "0.3.1"
authors = [
  { name="Anika Weinmann", email="weinmann@mundialis.de" },
]
maintainers = [{name="mundialis GmbH & Co. KG", email="info@mundialis.de"}]
description = "Python client library for actinia requests."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: GPLv3 License",
        "Operating System :: OS Independent",
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
]
dependencies = [
        "jinja2",
        "requests",
        "sphinx-material",
]

[project.urls]
"Homepage" = "https://github.com/actinia-org/actinia-python-client"
"Bug Tracker" = "https://github.com/actinia-org/actinia-python-client/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
actinia = ["templates/*.json"]